--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<div class="container">
 				<!-- Navbar Brand start -->
 				<a class="navbar-brand" href="#">
-					<h1><span>Jesica</span> Silva</h1>
+					<h1><span>Jenecil</span> Patac/h1>
 				</a>
 				<!-- Navbar Brand end -->
 				
@@ -65,8 +65,6 @@
 					<li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
 					<li class="nav-item"><a class="nav-link" href="#resume">Resume</a></li>
 					<li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-					<li class="nav-item"><a class="nav-link" href="#pricing">Pricing</a></li>
-					<li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li>
 					<li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
 				</ul>
 				<!-- Navigation Ends -->				
@@ -121,7 +119,7 @@
 				<div class="col-lg-4">
 					<!-- About image start -->
 					<div class="about-image wow fadeInLeft" data-wow-delay="0.3s">
-						<img src="images/about.jpg" alt="" />
+						<img src="images/about1.jpeg" alt="" />
 					</div>
 					<!-- About image end -->
 				</div>
