--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="">
     <meta name="author" content="Awaiken Theme">
 	<!-- Page Title -->
+	<link href="images/logo.jpg" rel="icon">
 	<title>Jenecil Patac</title>
 	<!-- Google Fonts css-->
 	<link href="https://fonts.googleapis.com/css?family=Berkshire+Swash%7CRoboto:300,400,400i,500,500i,700,700i,900" rel="stylesheet">
