--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 						<h2 class="cd-headline clip">
 							<span class="before-heading">Hi There! I'm </span>
 							<span class="cd-words-wrapper">
-								<b class="is-visible">UI/UX Designer</b>
-								<b>Web Developer</b>
+								<b class="is-visible">Data Analyst</b>
+								<b>Front - End Developer</b>
 							</span>
 						</h2>
 						<p>Good day! I am graduating student of BS Information Technology. My desire to use technology 
